Fix z-index

--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -7,7 +7,7 @@
     top: 0;
     background-color: $bgc-main;
     width: 100%;
-    z-index: 9999999;
+    z-index: 99999;
     transition: all 0.1s ease-in-out;
 
     &.collapsed {
