--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -115,7 +115,7 @@
             left: 40px;
             height: 100%;
             grid-template-columns: 36px 1fr;
-            // z-index: 11;
+            z-index: 11;
 
 
 
